syntax = "proto3";

package authz.v1;

option go_package = "authz-go/pkg/proto/authz/v1;authzv1";

import "authz/v1/common.proto";
import "google/protobuf/timestamp.proto";

service OrganizationService {
  rpc CreateOrganization(CreateOrganizationRequest) returns (CreateOrganizationResponse);
  rpc GetOrganization(GetOrganizationRequest) returns (GetOrganizationResponse);
  rpc UpdateOrganization(UpdateOrganizationRequest) returns (UpdateOrganizationResponse);
  rpc DeleteOrganization(DeleteOrganizationRequest) returns (DeleteOrganizationResponse);
  rpc ListOrganizations(ListOrganizationsRequest) returns (ListOrganizationsResponse);
  rpc ListMembers(ListOrgMembersRequest) returns (ListOrgMembersResponse);
  rpc InviteMember(InviteMemberRequest) returns (InviteMemberResponse);
  rpc AcceptInvitation(AcceptInvitationRequest) returns (AcceptInvitationResponse);
  rpc RemoveMember(RemoveOrgMemberRequest) returns (RemoveOrgMemberResponse);
  rpc UpdateMemberRole(UpdateOrgMemberRoleRequest) returns (UpdateOrgMemberRoleResponse);
}

message OrganizationInfo {
  string id = 1;
  string name = 2;
  string slug = 3;
  string owner_id = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreateOrganizationRequest {
  string name = 1;
  string slug = 2;
}

message CreateOrganizationResponse {
  OrganizationInfo organization = 1;
}

message GetOrganizationRequest {
  oneof identifier {
    string id = 1;
    string slug = 2;
  }
}

message GetOrganizationResponse {
  OrganizationInfo organization = 1;
}

message UpdateOrganizationRequest {
  string org_id = 1;
  optional string name = 2;
  optional string slug = 3;
}

message UpdateOrganizationResponse {
  OrganizationInfo organization = 1;
}

message DeleteOrganizationRequest {
  string org_id = 1;
}

message DeleteOrganizationResponse {}

message ListOrganizationsRequest {
  PaginationRequest pagination = 1;
}

message ListOrganizationsResponse {
  repeated OrganizationInfo organizations = 1;
  PaginationResponse pagination = 2;
}

message ListOrgMembersRequest {
  string org_id = 1;
  PaginationRequest pagination = 2;
}

message ListOrgMembersResponse {
  repeated MemberInfo members = 1;
  PaginationResponse pagination = 2;
}

message InviteMemberRequest {
  string org_id = 1;
  string email = 2;
  string role_id = 3;
}

message InviteMemberResponse {
  string invitation_id = 1;
}

message AcceptInvitationRequest {
  string token = 1;
}

message AcceptInvitationResponse {
  OrganizationInfo organization = 1;
}

message RemoveOrgMemberRequest {
  string org_id = 1;
  string user_id = 2;
}

message RemoveOrgMemberResponse {}

message UpdateOrgMemberRoleRequest {
  string org_id = 1;
  string user_id = 2;
  string role_id = 3;
}

message UpdateOrgMemberRoleResponse {}
